--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark navbar-expand-lg py-0 fixed-top" id="mainNavbar">
+  <nav class="navbar navbar-dark navbar-expand-lg py-0 px-0 fixed-top" id="mainNavbar">
     <a href="#" class="navbar-brand">CANDY</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
           <h1 id="museumG">MUSEUM<span id="1">/</span>OF<span id="1">/</span>CANDY</h1>
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6" id="imageId">
         <img src="imgs/hand2.png" class="img-fluid" alt="">
       </div>
     </div>
@@ -60,7 +60,7 @@
 
   <section class="container-fluid px-0">
     <div class="row content align-items-center">
-      <div class="col-md-6 order-2 order-md-1">
+      <div class="col-md-6 order-2 order-md-1" id="imageId">
         <img src="imgs/milk.png" class="img-fluid" alt="img of decorated milk bottles">
       </div>
       <div class="col-md-6 text-center order-1 order-md-2" id="rowOfTwo">
@@ -96,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6" id="imageId">
         <img src="imgs/gumball.png" class="img-fluid" alt="">
       </div>
     </div>
@@ -104,7 +104,7 @@
 
   <section class="container-fluid px-0">
     <div class="row content align-items-center">
-      <div class="col-md-6 order-2 order-md-1">
+      <div class="col-md-6 order-2 order-md-1" id="imageId">
         <img src="imgs/sprinkles.png" class="img-fluid" alt="">
       </div>
       <div class="col-md-6 text-center order-1 order-md-2" id="rowOfTwo">
